# infernoVX

./: CMakeLists.txt  README.md
include/: logger.h
resources/: deferred.frag  deferred.vert  drawquad.frag  drawquad.vert  tracer.frag  tracer.vert
src/: camera.cpp  camera.hpp  display.cpp  display.hpp  main.cpp  pipeline.cpp  pipeline.hpp  rasterbuffer.cpp  rasterbuffer.hpp  scene.cpp  scene.hpp  settings.hpp  shader.cpp  shader.hpp  utilities.hpp  voxel.cpp  voxel.hpp
